feat: add documention feature and auto comment for future RAG
